Quorum/Library/Tests/Inheritance/Pass/CIsAB.quorum
class C is A, B 
    action Main
        
    end
end