Quorum/Library/Tests/Inheritance/Fail/ForgotBlueprintMain.quorum
class Main 
    action Main
        ForgotBlueprint blue
    end
end